--- a/src/XNA/FontStashSharp.FNA.Core.csproj
+++ b/src/XNA/FontStashSharp.FNA.Core.csproj
@@ -21,6 +21,6 @@
   </ItemGroup>  
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\FNA\FNA.Core.csproj" />
+    <ProjectReference Include="..\..\..\FNA\src\FNA\FNA.csproj" />
   </ItemGroup>
 </Project>
